content/_generated-doc/3.8/config/quarkus-logging-gelf.adoc

:summaryTableId: quarkus-logging-gelf
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-logging-gelf_configuration]]link:#quarkus-logging-gelf_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-enabled]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-enabled[quarkus.log.handler.gelf.enabled]`


[.description]
--
Determine whether to enable the GELF logging handler

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-host]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-host[quarkus.log.handler.gelf.host]`


[.description]
--
Hostname/IP-Address of the Logstash/Graylog Host By default it uses UDP, prepend tcp: to the hostname to switch to TCP, example: "tcp:localhost"

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`localhost`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-port]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-port[quarkus.log.handler.gelf.port]`


[.description]
--
The port

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`12201`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-version]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-version[quarkus.log.handler.gelf.version]`


[.description]
--
GELF version: 1.0 or 1.1

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`1.1`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-extract-stack-trace]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-extract-stack-trace[quarkus.log.handler.gelf.extract-stack-trace]`


[.description]
--
Whether to post Stack-Trace to StackTrace field.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_EXTRACT_STACK_TRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_EXTRACT_STACK_TRACE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-stack-trace-throwable-reference]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-stack-trace-throwable-reference[quarkus.log.handler.gelf.stack-trace-throwable-reference]`


[.description]
--
Only used when `extractStackTrace` is `true`. A value of 0 will extract the whole stack trace. Any positive value will walk the cause chain: 1 corresponds with exception.getCause(), 2 with exception.getCause().getCause(), ... Negative throwable reference walk the exception chain from the root cause side: -1 will extract the root cause, -2 the exception wrapping the root cause, ...

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_STACK_TRACE_THROWABLE_REFERENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_STACK_TRACE_THROWABLE_REFERENCE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-filter-stack-trace]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-filter-stack-trace[quarkus.log.handler.gelf.filter-stack-trace]`


[.description]
--
Whether to perform Stack-Trace filtering

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_FILTER_STACK_TRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_FILTER_STACK_TRACE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-timestamp-pattern]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-timestamp-pattern[quarkus.log.handler.gelf.timestamp-pattern]`


[.description]
--
Java date pattern, see `java.text.SimpleDateFormat`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_TIMESTAMP_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_TIMESTAMP_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|`yyyy-MM-dd HH:mm:ss,SSS`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-level]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-level[quarkus.log.handler.gelf.level]`


[.description]
--
The logging-gelf log level.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-facility]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-facility[quarkus.log.handler.gelf.facility]`


[.description]
--
Name of the facility.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_FACILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_FACILITY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`jboss-logmanager`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-include-full-mdc]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-include-full-mdc[quarkus.log.handler.gelf.include-full-mdc]`


[.description]
--
Whether to include all fields from the MDC.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_FULL_MDC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_FULL_MDC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-mdc-fields]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-mdc-fields[quarkus.log.handler.gelf.mdc-fields]`


[.description]
--
Send additional fields whose values are obtained from MDC. Name of the Fields are comma-separated. Example: mdcFields=Application,Version,SomeOtherFieldName

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_MDC_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_MDC_FIELDS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-dynamic-mdc-fields]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-dynamic-mdc-fields[quarkus.log.handler.gelf.dynamic-mdc-fields]`


[.description]
--
Dynamic MDC Fields allows you to extract MDC values based on one or more regular expressions. Multiple regexes are comma-separated. The name of the MDC entry is used as GELF field name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_DYNAMIC_MDC_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_DYNAMIC_MDC_FIELDS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-dynamic-mdc-field-types]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-dynamic-mdc-field-types[quarkus.log.handler.gelf.dynamic-mdc-field-types]`


[.description]
--
Pattern-based type specification for additional and MDC fields. Key-value pairs are comma-separated. Example: my_field.++*++=String,business++\++..++*\++.field=double

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_DYNAMIC_MDC_FIELD_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_DYNAMIC_MDC_FIELD_TYPES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-maximum-message-size]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-maximum-message-size[quarkus.log.handler.gelf.maximum-message-size]`


[.description]
--
Maximum message size (in bytes). If the message size is exceeded, the appender will submit the message in multiple chunks.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_MAXIMUM_MESSAGE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_MAXIMUM_MESSAGE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8192`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-include-log-message-parameters]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-include-log-message-parameters[quarkus.log.handler.gelf.include-log-message-parameters]`


[.description]
--
Include message parameters from the log event

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_LOG_MESSAGE_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_LOG_MESSAGE_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-include-location]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-include-location[quarkus.log.handler.gelf.include-location]`


[.description]
--
Include source code location

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_INCLUDE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-origin-host]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-origin-host[quarkus.log.handler.gelf.origin-host]`


[.description]
--
Origin hostname

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_ORIGIN_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_ORIGIN_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-skip-hostname-resolution]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-skip-hostname-resolution[quarkus.log.handler.gelf.skip-hostname-resolution]`


[.description]
--
Bypass hostname resolution. If you didn't set the `originHost` property, and resolution is disabled, the value “unknown” will be used as hostname

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_SKIP_HOSTNAME_RESOLUTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_SKIP_HOSTNAME_RESOLUTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-post-additional-fields]]link:#quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-post-additional-fields[Post additional fields]

h|Type
h|Default

a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-field-name-value]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-field-name-value[quarkus.log.handler.gelf.additional-field."field-name".value]`


[.description]
--
Additional field value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-field-name-type]]`link:#quarkus-logging-gelf_quarkus-log-handler-gelf-additional-field-field-name-type[quarkus.log.handler.gelf.additional-field."field-name".type]`


[.description]
--
Additional field type specification. Supported types: String, long, Long, double, Double and discover. Discover is the default if not specified, it discovers field type based on parseability.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_GELF_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_GELF_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`discover`

|===